--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/FullScreenTheme" >
-        <activity android:name=".TestActivity"
-            android:theme="@style/FullScreenTheme">
+        <activity
+            android:name=".TestActivity"
+            android:theme="@style/FullScreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.TimeActivity">
+        </activity>
         <activity android:name=".Activities.MainActivity" >
         </activity>
+
     </application>
 
 </manifest>
