--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
+    compile files('libs/BmobSDK_V3.4.4_0930.jar')
+    compile files('libs/Bmob_Push_V0.6beta_20150408.jar')
+    compile files('libs/okhttp-2.4.0.jar')
+    compile files('libs/okio-1.4.0.jar')
 }
