--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.iec.dwx.timer"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.iec.dwx.timer" >
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.READ_LOGS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
-	<uses-permission-sdk-23 android:name="android.permission.READ_LOGS"/>
-	<uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission-sdk-23 android:name="android.permission.READ_PHONE_STATE"/>
-	<uses-permission-sdk-23 android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission-sdk-23 android:name="android.permission.ACCESS_WIFI_STATE"/>
-	<uses-permission-sdk-23 android:name="android.permission.INTERNET"/>
+    <uses-permission-sdk-23 android:name="android.permission.READ_LOGS" />
+    <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission-sdk-23 android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
 
-	<application
-		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity
-			android:name=".TestActivity"
-			android:theme="@style/AppTheme">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".TestActivity"
+            android:theme="@style/AppTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-		<activity android:name=".Activities.TimeActivity">
-		</activity>
-		<activity android:name=".Activities.MainActivity">
-		</activity>
-		<activity android:name=".Activities.PublicWishes">
-		</activity>
-		<activity android:name=".Activities.PickPhotoActivity">
-		</activity>
-	</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activities.TimeActivity" >
+        </activity>
+        <activity android:name=".Activities.MainActivity" >
+        </activity>
+        <activity android:name=".Activities.PublicWishes" >
+        </activity>
+        <activity android:name=".Activities.PickPhotoActivity" >
+        </activity>
+        <activity android:name=".Activities.EditAchievementActivity" >
+        </activity>
+    </application>
 
 </manifest>
