--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,20 +24,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".TestActivity"
-            android:theme="@style/AppTheme" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	    <activity android:name=".Activities.TimeActivity" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".Activities.TimeActivity" >
         </activity>
         <activity android:name=".Activities.MainActivity" >
         </activity>
-        <activity android:name=".Activities.PickPhotoActivity" >
+        <activity android:name="com.flying.xiaopo.rxjava.PickPhotoActivity" >
         </activity>
         <activity android:name=".Activities.EditAchievementActivity" >
         </activity>
@@ -47,6 +39,11 @@
         <activity android:name=".Activities.ShowAchievementActivity" >
         </activity>
         <activity android:name=".Activities.StartActivity" >
+	        <intent-filter>
+		        <action android:name="android.intent.action.MAIN" />
+
+		        <category android:name="android.intent.category.LAUNCHER" />
+	        </intent-filter>
         </activity>
     </application>
 
