--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-	    <activity android:name=".Activities.TimeActivity" >
-
+        <activity android:name=".Activities.TimeActivity" >
         </activity>
         <activity android:name=".Activities.MainActivity" >
-        </activity>
-        <activity android:name="com.flying.xiaopo.rxjava.PickPhotoActivity" >
         </activity>
         <activity android:name=".Activities.EditAchievementActivity" >
         </activity>
@@ -39,11 +36,13 @@
         <activity android:name=".Activities.ShowAchievementActivity" >
         </activity>
         <activity android:name=".Activities.StartActivity" >
-	        <intent-filter>
-		        <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-		        <category android:name="android.intent.category.LAUNCHER" />
-	        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activities.AboutActivity" >
         </activity>
     </application>
 
