--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
+        <activity android:name=".TestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".Activities.StartActivity" >
+        </activity>
         <activity android:name=".Activities.TimeActivity" >
         </activity>
         <activity android:name=".Activities.MainActivity" >
@@ -34,13 +45,6 @@
         </activity>
         <activity android:name=".Activities.OtherWishes" />
         <activity android:name=".Activities.ShowAchievementActivity" >
-        </activity>
-        <activity android:name=".Activities.StartActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Activities.AboutActivity" >
         </activity>
